# C

./: 1. Data Types.c  24MC3035.docx  24MC3035.txt  5. i. Addition using int.c  5. ii. Addition using double.c  6. Division of Two Nmbers.c  CMakeLists.txt  CodeBlocks.cbp  CodeBlocks.depend  README.md
1. Hello_World/: Hello_World.c  tempCodeRunnerFile.c
Files/: Cheat.txt
Guides/: 0. new_Code.c  24MC3035.txt  self_Learning_Sheet.c
Lab 1/: 0. demo.c
Lab 2/: 1. Data Types.c  2. Name Storing in Data Types.c  3. Celsius to Fahrenheit No Brackets (Cx9by5+32).c  4. Celsius to Fahrenheit (Cx(9by5)+32).c  5. i. Addition using int.c  5. ii. Addition using double.c  6. Division of Two Nmbers.c  7. Array.c  8. BODMAS.c
Lab 2 - 19-08-2024/: 7. Array.c
Lab 3/: 1. Addition of Two Integers.c  2. Centigrade to Fahrenheit.c  6. Average Mark and Percentage.c
Lab 3 - 26-08-2024/: 3. Area of a Circle.c  4. Area of Triangle.c
Lab 4 - 01-09-2024/: 2. Time Conversion Utility .c  3. Profit or Loss Calculator Determining Seller's Profit or Loss Based on Discount.c  4. Swapping Numbers.c  5. Maximum Value.c
Lab 4 - 02-09-2024/: 1. Rupee and Paisa Conversion Utility.c  10. Pattern_3.c  2. Time Conversion Utility .c  4. Swapping Numbers.c  6. Finding Quotient and Remainder.c  7. Types of Triangle.c  8. Pattern_1.c  9. Pattern_2.c
Labs/: Test.c
Sample/: Test  Test.c
Tutorial 1 - 28-08-2024/: 1. Operator Precedence Demonstration.c  14. Program 4 Nested If-Else.c  2. Parentheses Influence.c  5. Bitwise Operator Precedence.c  6. Complex Expression Simplification.c  (+4 more)
(+132 files in other folders)
